# synac-legacy

./: .gitignore  LIMITS.md  OVERFLOW.md  PARSER-SPEC  README.md  SECURITY.md
client/: Cargo.toml  tmp
client-gtk/: Cargo.toml
client-gtk/src/: connections.rs  main.rs  messages.rs
client/src/: connect.rs  encrypter.rs  frontend.rs  frontend_cursive.rs  frontend_minimal.rs  help.rs  listener.rs  main.rs  parser.rs
common/: Cargo.toml  README
common/src/: encrypter.rs  lib.rs
server/: .gitignore  Cargo.toml  cert.pem  gencert.sh  genkeys.sh  key.pem  tmp
server/src/: decrypter.rs  main.rs
structs/: Cargo.toml
structs/src/: lib.rs
