[package]
name = "client"
version = "0.1.0"
authors = ["jD91mZM2 <LEGOlord208@krake.one>"]

[dependencies]
openssl   = "0.9"
rusqlite  = "0.12"
rustyline = "1.0"

cursive = { version = "0.7", optional = true }
termion = { version = "1.5", optional = true }

common = { path = "../common/" }

[features]
default = ["minimal"]
minimal = ["termion"]
